💎style(editor) fix overflow issues

--- a/src/app/editor/editor.component.scss
+++ b/src/app/editor/editor.component.scss
@@ -45,6 +45,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
+    height: 100%;
     overflow: hidden;
 }
 
@@ -52,6 +53,7 @@
     display: flex;
     height: 100%;
     width: 100%;
+    overflow: hidden;
 }
 
 .editor {
@@ -59,6 +61,7 @@
     font-family: 'Fira Sans';
     background-color: var(--editor-background-color);
     cursor: text;
+    contain: content;
 
     .editor__inner.monospaced {
         font-family: 'Fira Mono', "Droid Sans Mono", "monospace", monospace;
@@ -99,6 +102,8 @@
 
 .preview {
     background-color: var(--preview-background-color);
+    overflow: hidden;
+    contain: content;
 
     &,
     .preview__inner-1 {
